log/build_2024-04-28_04-45-54/lp_slam/stdout_stderr.log
running egg_info
writing ../../build/lp_slam/lp_slam.egg-info/PKG-INFO
writing dependency_links to ../../build/lp_slam/lp_slam.egg-info/dependency_links.txt
writing entry points to ../../build/lp_slam/lp_slam.egg-info/entry_points.txt
writing requirements to ../../build/lp_slam/lp_slam.egg-info/requires.txt
writing top-level names to ../../build/lp_slam/lp_slam.egg-info/top_level.txt
reading manifest file '../../build/lp_slam/lp_slam.egg-info/SOURCES.txt'
adding license file 'LICENSE'
running build
running build_py
running install
running install_lib
  File "/home/arms/paper3_ws/install/lp_slam/lib/python3.10/site-packages/lp_slam/lp_node.py", line 439
    print("mu:", mu[3+2*exp_pt_landm:4+2*exp_pt_landm + 2*N_line].reshape(-1, 2)
         ^
SyntaxError: '(' was never closed

running install_data
running install_egg_info
running install_scripts
Installing lp_node script to /home/arms/paper3_ws/install/lp_slam/lib/lp_slam
